# SumatraLister

./: Build.bat  CMakeLists.txt  README.md  SumatraLister.cpp  SumatraLister.def  SumatraLister.ini  pluginst.inf
